--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "actum miniApp",
+  "name": "actumMiniApp",
   "version": "1.0.0",
   "description": "Testing App",
   "main": "index.js",
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "material-ui": "^0.15.4",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-tap-event-plugin": "^1.0.0"
